Added docker-compose.yml and fixed database script

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Created by https://www.gitignore.io/api/python,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,visualstudiocode
 
+### Postgres ###
+# Postgres Data
+database/data/
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
