--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -2,3 +2,4 @@ FROM postgres:latest
 ENV POSTGRES_USER=root
 ENV POSTGRES_PASSWORD=root
 ENV POSTGRES_DB=bd
+COPY ./database/data /var/lib/postgresql/data
