--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
+language: python
+
 services:
   - docker
 
-before_install:
-  - docker build --tag postgres ./database
+before_script:
+  - docker-compose up --detach --build
+
+script:
+  - docker exec postgres psql database
+
+after_script:
+  - docker-compose down
