--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: python
 services:
   - docker
 
-before_script:
+before_install:
   - docker-compose up --detach --build
 
-after_script:
+after_install:
   - docker-compose down
