--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ language: python
 services:
   - docker
 
-before_install:
+before_script:
   - docker-compose up --detach --build
 
-after_install:
+script:
+  - docker ps -a
+
+after_script:
   - docker-compose down
