Fixed wrong requirement and docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,5 @@ services:
     restart: on-failure
     image: api
     container_name: api
-    depends_on: database
+    depends_on: 
+      - database
