--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,4 +6,4 @@ WORKDIR /usr/src/app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python", "./app.py"]
+CMD python ./app.py $URL $PORT $POSTGRES_DB $POSTGRES_USER $POSTGRES_PASSWORD
