--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: "3.7"
-
 services:
   database:
     build: ./database
@@ -15,3 +14,12 @@ services:
     env_file: env.list
     depends_on: 
       - database
+  web:
+    build: ./web
+    restart: on-failure
+    image: web
+    container_name: web
+    depends_on:
+      - api
+    ports:
+      - 5080:80
