--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,4 +1,5 @@
 FROM postgres:12
+COPY ./data /var/lib/postgresql/data
 # Loads scripts in alphabetic order.
 ADD ./a_schema.sql /docker-entrypoint-initdb.d/
 ADD ./b_uuid_generator.sql /docker-entrypoint-initdb.d/
@@ -6,3 +7,4 @@ ADD ./c_insert.sql /docker-entrypoint-initdb.d/
 ADD ./d_delete.sql /docker-entrypoint-initdb.d/
 ADD ./e_select.sql /docker-entrypoint-initdb.d/
 ADD ./f_update.sql /docker-entrypoint-initdb.d/
+ADD ./g_trigger.sql /docker-entrypoint-initdb.d/
