Added auto-insert dummy rows

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -7,3 +7,4 @@ ADD ./d_delete.sql /docker-entrypoint-initdb.d/
 ADD ./e_select.sql /docker-entrypoint-initdb.d/
 ADD ./f_update.sql /docker-entrypoint-initdb.d/
 ADD ./g_trigger.sql /docker-entrypoint-initdb.d/
+ADD ./h_dummy.sql /docker-entrypoint-initdb.d/
