--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     env_file: env.list
     depends_on:
       - database
+    ports:
+      - 5000:80
   web:
     build: ./web
     restart: on-failure
