Changed all the instance were frontend was web and fixed a problem with using latest in dockerfile

--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -6,11 +6,11 @@ languages:
       - /tests/.*
       - /api/databaseutils.py
       - /database/.*
-      - /web/.*
+      - /frontend/.*
   test:
     exclude:
       - /api/databaseutils.py
       - /database/.*
-      - /web/.*
+      - /frontend/.*
     include:
       - /tests/.*
